--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,7 @@
         "target": "es5"
         },
   "files": [
-    "typings/angular2-meteor.d.ts",
-    "typings/party.d.ts",
+    "typings/main.d.ts",
     "client/app.ts",
     "server/main.ts"
   ]
