--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,26 @@
 {
     "compilerOptions": {
         "experimentalDecorators": true,
-        "module": "System",
+        "module": "system",
         "target": "es5"
     },
     "files": [
+        "typings/meteor/meteor.d.ts",
+        "typings/angular2/core_amb.d.ts",
+        "typings/angular2/common_amb.d.ts",
+        "typings/angular2/router_amb.d.ts",
+        "typings/angular2/browser_amb.d.ts",
         "typings/angular2-meteor/angular2-meteor.d.ts",
         "typings/collections/organization.d.ts",
-        "typings/collections/event.ts",
-        "typings/collections/attendance.ts",
-        "typings/collections/admin.ts",
-        "typings/collections/master.ts",
-        "typings/collections/participant.ts",
-        "typings/collections/credit.ts",
+        "typings/collections/event.d.ts",
+        "typings/collections/attendance.d.ts",
+        "typings/collections/admin.d.ts",
+        "typings/collections/master.d.ts",
+        "typings/collections/participant.d.ts",
+        "typings/collections/credit.d.ts",
         "typings/meteor-accounts/meteor-accounts-ui.d.ts",
         "typings/meteor-accounts/meteor-accounts.d.ts",
         "client/app.ts",
-        "server/main.ts",
-        "typings/angular2/core.d.ts"
+        "server/main.ts"
     ]
 }
